# BigCode

./: README.md  TOOL_PERMISSION_CC_ANALYSIS.md  pyproject.toml
.bigcode/: models.json
.bigcode/plans/: session_19e48b9e95b_472c94d7.md
big_pro/: 01-cli.md  02-config-loader.md  03-agent-session.md  04-context-messages.md  05-context-builder.md  06-context-normalizer.md  07-context-compact.md  08-tools-base.md  09-tools-registry.md  10-tools-runner.md  11-tools-permissions.md  12-hooks.md  13-skills.md  14-subagents.md  15-mcp.md
bigcode/: __init__.py  __main__.py  cli.py  diagnostics.py  tui.py
bigcode/agent/: __init__.py  events.py  gateway.py  session.py  snapshot.py
bigcode/commands/: __init__.py  parser.py  registry.py
bigcode/config/: __init__.py  loader.py  models.py
bigcode/context/: __init__.py  attachments.py  budget.py  builder.py  compact.py  messages.py  normalizer.py  system_prompt.py  transcript.py
bigcode/hooks/: __init__.py  builtins.py  bus.py  command.py  models.py
bigcode/mcp/: __init__.py  client.py
bigcode/plan/: mode.py  (+2 more)
doc/: BigCode.md  CodeReadingGuide.md  Config.md  Context.md  Hooks.md  MCP-Skill.md  TaskPlan.md  Tool.md  memory-compact-deep-dive.md  subAgent.md
doc-plus/: OpenHarness-incremental-learning.md
tests/: test_agent_events.py  test_artifacts.py  test_background_subagents.py  test_bigcode_core.py  test_compact.py  test_diagnostics.py  test_phase3_ecosystem.py  test_phase5_gateway.py  test_sandbox_profiles.py  test_session_resume.py  test_streaming_protocols.py  test_tool_permissions_flow.py  test_tool_search.py
(+106 files in other folders)
