[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bigcode"
version = "0.1.0"
description = "A compact Python coding agent inspired by Claude Code."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2",
  "httpx>=0.25",
]

[project.scripts]
bigcode = "bigcode.cli:main"

[tool.setuptools.packages.find]
include = ["bigcode*"]

[tool.setuptools.package-data]
"bigcode.skills" = ["builtin/*/SKILL.md"]
